--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Socket Server for captAR React Native client",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha **/*.test.js *.test.js",
+    "deploy": "git checkout -b deploy && webpack -p && git add -f public/bundle.js public/bundle.js.map && git commit --allow-empty -m 'Deploying' && git push --force heroku deploy:master && git checkout master && git branch -D deploy",
+    "start-dev": "node_modules/nodemon/bin/nodemon.js -- node_modules/babel-cli/bin/babel-node.js server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,21 @@
   "bugs": {
     "url": "https://github.com/team-copper/captarserver/issues"
   },
-  "homepage": "https://github.com/team-copper/captarserver#readme"
+  "homepage": "https://github.com/team-copper/captarserver#readme",
+  "dependencies": {
+    "chalk": "^2.1.0",
+    "cookie-session": "^1.3.2",
+    "express": "^4.16.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
+    "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "nodemon": "^1.12.1"
+  }
 }
