fine tuning start task for heroku

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha **/*.test.js *.test.js",
     "deploy": "git checkout -b deploy && git commit --allow-empty -m 'Deploying' && git push --force heroku deploy:master && git checkout master && git branch -D deploy",
     "start-dev": "node_modules/nodemon/bin/nodemon.js -- node_modules/babel-cli/bin/babel-node.js server.js",
-    "start": "node_modules/babel-cli/bin/babel-node.js server.js"
+    "start": "./node_modules/babel-cli/bin/babel-node.js server.js"
   },
   "repository": {
     "type": "git",
